# Gain-Knob

./: Cargo.toml  Cross.toml  README.md  build.rs
scripts/: build-cross-linux.sh
src/: lib.rs
src/gui/: globals.slint  ui.slint
src/gui/components/: knob.slint  text-input.slint
xtask/: Cargo.toml
